--- a/css/common.css
+++ b/css/common.css
@@ -1,23 +1,27 @@
-/* COMMON(공통) ***************************************************************************************************/
+/*COMMON*/
 body {
-  color: #333;
+  font-family: 'Nanum Gothic', sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.4;
-  font-family: 'Nanum Gothic', sans-serif;
-}
-img {
-  /* 레이아웃으로 취급 ****************************************************************************************************/
-  display: block;
+  color: #333;
 }
 a {
   text-decoration: none;
 }
+img {
+  /* img(인라인 요소) 하단에 Baseline 공백을 제거 */
+  display: block;
+}
+
+/*INNER*/
 .inner {
   width: 1100px;
   margin: 0 auto;
   position: relative;
 }
+
+/*BUTTON*/
 .btn {
   width: 130px;
   padding: 10px;
@@ -34,11 +38,11 @@ a {
 }
 .btn:hover {
   background-color: #333;
-  color: #fff;
+  color: #FFF;
 }
 .btn.btn--reverse {
   background-color: #333;
-  color: #fff;
+  color: #FFF;
 }
 .btn.btn--reverse:hover {
   background-color: transparent;
@@ -62,12 +66,14 @@ a {
 }
 .btn.btn--white {
   color: #FFF;
-  border-color: #fff;
+  border-color: #FFF;
 }
 .btn.btn--white:hover {
   color: #333;
-  background-color: #fff;
+  background-color: #FFF;
 }
+
+/*BACK TO POSITION*/
 .back-to-position {
   opacity: 0;
   transition: 1s;
@@ -95,35 +101,32 @@ a {
   transition-delay: .9s;
 }
 
-/* HEADER ****************************************************************************************************/
+
+/*HEADER*/
 header {
   width: 100%;
-  background-color: #f6f5f0;
-  border-bottom: 1px solid #c8c8c8;
   position: fixed;
   top: 0;
   z-index: 9;
+  background-color: #F6F5F0;
+  border-bottom: 1px solid #c8c8c8;
 }
-/*///////////////*/
 header > .inner {
   height: 120px;
 }
 header .logo {
   height: 75px;
-  /* 수직 가운데정렬 ****************************************************************************************************/
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   margin: auto;
 }
-
-/* SUBMENU ****************************************************************************************************/
 header .sub-menu {
-  display: flex;
   position: absolute;
-  top: 10;
+  top: 10px;
   right: 0;
+  display: flex;
 }
 header .sub-menu ul.menu {
   font-family: Arial, sans-serif;
@@ -136,9 +139,8 @@ header .sub-menu ul.menu li::before {
   content: "";
   width: 1px;
   height: 12px;
-  background-color: #252525;
-  /* 블록요소로 변함/수평정렬 ****************************************************************************************************/
-  position: absolute; 
+  background-color: #e5e5e5;
+  position: absolute;
   top: 0;
   bottom: 0;
   margin: auto;
@@ -147,23 +149,22 @@ header .sub-menu ul.menu li:first-child::before {
   display: none;
 }
 header .sub-menu ul.menu li a {
-  font-size: 12px;
-  display: block;
   padding: 11px 16px;
+  display: block;
+  font-size: 13px;
   color: #656565;
 }
 header .sub-menu ul.menu li a:hover {
   color: #000;
 }
-
-/* SEARCH ****************************************************************************************************/
 header .sub-menu .search {
-  height: 34px;
   position: relative;
+  height: 34px;
 }
 header .sub-menu .search input {
   width: 36px;
-  height: 34px;
+  height: inherit;
+  padding: 4px 10px;
   border: 1px solid #ccc;
   box-sizing: border-box;
   border-radius: 5px;
@@ -173,7 +174,7 @@ header .sub-menu .search input {
   font-size: 12px;
   transition: width .4s;
 }
-header .sub-menu .search input:focus{
+header .sub-menu .search input:focus {
   width: 190px;
   border-color: #669900;
 }
@@ -183,36 +184,29 @@ header .sub-menu .search .material-icons {
   top: 0;
   bottom: 0;
   right: 5px;
-  margin: auto; 
-  transition: opacity .4s;
+  margin: auto;
+  transition: .4s;
 }
 header .sub-menu .search.focused .material-icons {
-  /* 포커스드 클래스 작동시 투명하게 만듬 ****************************************************************************************************/
   opacity: 0;
 }
-
-/* MAINMENU ****************************************************************************************************/
 header .main-menu {
   position: absolute;
-  bottom: 0px;
-  right: 0px;
+  bottom: 0;
+  right: 0;
   z-index: 1;
   display: flex;
 }
-header .main-menu .item {
-
-}
 header .main-menu .item .item__name {
-   padding: 10px 20px 34px 20px;
-   font-family: Arial, san-serif;
-   font-size: 13px;
+  padding: 10px 20px 34px 20px;
+  font-family: Arial, sans-serif;
+  font-size: 13px;
 }
 header .main-menu .item:hover .item__name {
-  background-color: #2c2a29;
+  background-color: #2C2A29;
   color: #669900;
   border-radius: 6px 6px 0 0;
 }
-/* 드롭다운 배치 숨김 나타남 제어 ****************************************************************************************************/
 header .main-menu .item .item__contents {
   width: 100%;
   position: fixed;
@@ -222,13 +216,12 @@ header .main-menu .item .item__contents {
 header .main-menu .item:hover .item__contents {
   display: block;
 }
-/* //////////// */
 header .main-menu .item .item__contents .contents__menu {
-  background-color: #2c2a29;
+  background-color: #2C2A29;
 }
 header .main-menu .item .item__contents .contents__menu > ul {
-  display: flex;
   padding: 20px 0;
+  display: flex;
 }
 header .main-menu .item .item__contents .contents__menu > ul > li {
   width: 220px;
@@ -240,7 +233,7 @@ header .main-menu .item .item__contents .contents__menu > ul > li h4 {
 }
 header .main-menu .item .item__contents .contents__menu > ul > li ul li {
   padding: 5px 0;
-  font-size: 12px;  
+  font-size: 12px;
   color: #999;
   cursor: pointer;
 }
@@ -254,30 +247,28 @@ header .main-menu .item .item__contents .contents__texture {
 }
 header .main-menu .item .item__contents .contents__texture h4 {
   color: #999;
-  font-weight: 700;
+  font-weight: 900;
 }
 header .main-menu .item .item__contents .contents__texture p {
-  color: #669900;
+  color: #64a70b;
   margin: 4px 0 14px;
 }
-
-/* Badge ****************************************************************************************************/
+/*BADGES*/
 header .badges {
   position: absolute;
-  top: 130px;
+  top: 132px;
   right: 12px;
 }
-header .badges .badge{
+header .badges .badge {
   border-radius: 10px;
-  /* 이미지가 래디우스를 넘치지 않도록 오버플로우 *******************************************************************/
-  overflow: hidden; 
+  overflow: hidden;
   margin-bottom: 12px;
   box-shadow: 4px 4px 10px rgba(0,0,0,.15);
   cursor: pointer;
 }
-/* 헤더 정리 부분 끝 ****************************************************************************************************/
 
-/* /푸터섹션 */
+
+/*FOOTER*/
 footer {
   background-color: #272727;
   border-top: 1px solid #333;
@@ -293,7 +284,7 @@ footer .menu li {
   position: relative;
 }
 footer .menu li::before {
-  content: '';
+  content: "";
   width: 3px;
   height: 3px;
   background-color: #555;
@@ -307,11 +298,11 @@ footer .menu li:last-child::before {
   display: none;
 }
 footer .menu li a {
-  color: #ccc;
+  display: block;
+  color: #CCC;
   font-size: 12px;
   font-weight: 700;
   padding: 15px;
-  display: block;
 }
 footer .menu li a.green {
   color: #669900;
@@ -329,7 +320,7 @@ footer .btn-group .btn:last-child {
   margin-right: 0;
 }
 footer .info {
-  margin: 30px;
+  margin-top: 30px;
   text-align: center;
 }
 footer .info span {
@@ -342,8 +333,8 @@ footer .info span:last-child {
 }
 footer .copyright {
   color: #999;
-  text-align: center;
   font-size: 12px;
+  text-align: center;
   margin-top: 12px;
 }
 footer .logo {
